...
        modifier = modifier
    ) {
        Row(
            modifier = Modifier.fillMaxWidth()
        ) {
            DefaultRadioButton(
                text = "Title",
                selected = noteOrder is Note_order.Title,
                onSelect = { onOrderChange(Note_order.Title(noteOrder.ordertype)) }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Date",
...
                onSelect = {
                    onOrderChange(noteOrder.copy(Ordertype.Ascending))
                }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                selected = noteOrder.ordertype is Ordertype.Descending,
                onSelect = {
                    onOrderChange(noteOrder.copy(Ordertype.Descending))
                }
            )
        }
...
